--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,19 @@ h2 {
     margin: 10px auto;
 }
 
+#message {
+    font-size: 14px;
+    color: red;
+}
+
+.login-container {
+    background-color: var(--cor0);
+    max-width: 250px;
+    padding: 15px;
+    border: solid 1px var(--cor3);
+    margin: 100px auto;
+}
+
 .cadastro-container {
     background-color:var(--cor0);
     max-width: 250px;
