--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,19 @@ h2 {
     margin: 10px auto;
 }
 
+.laura {
+    font-size:60px;
+    color: #b609b6;
+}
+
+.laura1 {
+    background-color: #ffffff;
+    color: 
+    rgb(0, 0, 0);
+    margin:80px 50px 10px 30px;
+
+}
+
 #message {
     font-size: 14px;
     color: red;
